# hiak

./: Makefile  README.md  default.nix  hiak.cabal
Hiak/: CHash.hs  Ring.hs  VClock.hs
