name:                hiak
version:             0.1.0.0
license-file:        LICENSE
author:              Vladimir Kirillov
maintainer:          proger@hackndev.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Hiak.VClock
  build-depends:       base, time, text
  default-language:    Haskell2010
